WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290593
[css-anchor-position-1] Fix various bugs in position-try shorthand parser and serializer
https://bugs.webkit.org/show_bug.cgi?id=290593
Summary
[css-anchor-position-1] Fix various bugs in position-try shorthand parser and...
Kiet Ho
Reported
2025-03-27 18:30:59 PDT
[css-anchor-position-1] Fix various bugs in position-try shorthand parser and serializer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-27 18:31:08 PDT
<
rdar://problem/148068669
>
Kiet Ho
Comment 2
2025-03-28 01:19:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43180
EWS
Comment 3
2025-03-31 18:35:04 PDT
Committed
292984@main
(19966d8fdd43): <
https://commits.webkit.org/292984@main
> Reviewed commits have been landed. Closing PR #43180 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug